# handwriting-synthesis-uv

./: .gitignore  CHANGELOG.md  INSTALL.md  README.md  demo.py  pyproject.toml  rnn.py  rnn_cell.py  test_comprehensive.py  test_messiness.py  test_messiness_simple.py  test_stress.py  test_summary.py
docs/: model.stats.md  model.xml
scripts/: setup_verify.py
src/: __init__.py  demo.py  drawing.py  prepare_data.py  rnn.py  rnn_cell.py  rnn_ops.py  tf_base_model.py  tf_compat.py  tf_utils.py
tests/: __init__.py  test_comprehensive.py  test_messiness.py  test_messiness_simple.py  test_stress.py  test_summary.py
